--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="https://freepngimg.com/save/19723-wizard-png-hd/1855x2177" type="image/x-icon">
+    <title>Wizard Game</title>
 </head>
     <body>
         <main>
